<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/planetearth" />

    <TextView
        android:id="@+id/tvSloganmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivLogo3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/tv_sloganmain"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivLogo3"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_alignStart="@+id/imageView2"
        android:layout_alignLeft="@+id/imageView2"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="448dp"
        android:src="@drawable/rocketlogo"
        app:civ_border_color="#EEE"
        app:civ_border_width="0dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#FFF"
        app:civ_shadow_radius="0" />

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/myswipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/imageView2"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTexto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/tv_texto" />
                </LinearLayout>
            </ScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLeave"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/b_button"
        android:text="@string/btn_leave"
        android:textColor="@color/boton" />

    <Button
        android:id="@+id/btnStay"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/boton"
        android:text="@string/btn_stay"
        android:textColor="@android:color/white" />

</RelativeLayout>