<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/planetearth"
    tools:context=".BLogin">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/scrim" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/et_usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="188dp"
        android:ems="10"
        android:hint="@string/et_contraseña"
        android:inputType="textPersonName" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivLogo2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="366dp"
        android:src="@drawable/rocketlogo"
        app:civ_border_color="#EEE"

        app:civ_border_width="0dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#FFF"
        app:civ_shadow_radius="0" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etContraseña"
        android:layout_alignLeft="@+id/etContraseña"
        android:layout_alignEnd="@+id/etContraseña"
        android:layout_alignRight="@+id/etContraseña"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginRight="-4dp"
        android:layout_marginBottom="115dp"
        android:background="#216fed"
        android:onClick="entrar"
        android:text="@string/btn_entrar"
        android:textColor="@android:color/white" />
</RelativeLayout>